--- a/EinheitsKiste.asmdef
+++ b/EinheitsKiste.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "EinheitsKiste"
+	"name": "EinheitsKiste",
+	"rootNamespace": "",
+    "references": [
+        "MyBox"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
