Manage Component types

--- a/EinheitsKiste.asmdef
+++ b/EinheitsKiste.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "EinheitsKiste",
     "references": [
         "MyBox",
-        "TypeReferences"
+        "TypeReferences",
+        "SolidUtilities.Editor"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
